# y_dart

./: Makefile  README.md  ffigen.yaml  native_manifest.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  main_test.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
ios/: y_dart.podspec
ios/Classes/: y_dart.c
lib/: y_dart.dart  y_dart_bindings_generated.dart
lib/src/: doc.dart  observable.dart  origin.dart  text_change.dart  transaction.dart  undo_manager.dart  value.dart  y_array.dart  y_dart.dart  y_map.dart  y_text.dart  y_type.dart  y_xml.dart
lib/src/ffi/: ffi.dart  y_dart_bindings_generated.dart
lib/y_dart/: all.dart  doc.dart  observable.dart  origin.dart  text_change.dart  transaction.dart  undo_manager.dart  value.dart  y_array.dart  y_doc.dart  y_map.dart  y_origin.dart  y_text.dart  y_type.dart  y_xml.dart
lib/y_dart/ffi/: ffi.dart  y_dart_bindings_generated.dart
linux/: CMakeLists.txt
macos/: y_dart.podspec
rust/: Cargo.toml  libyrs.h
rust/src/: lib.rs
src/: CMakeLists.txt  y_dart.c
test/: main_test.dart  y_dart_test.dart
windows/: CMakeLists.txt
(+4 files in other folders)
